feat: enhance review management with primary repository handling and improved repository filtering